# aism

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
.homebrew/: aism.rb
aism/: __init__.py  cli.py  content.py  fzf.py  model.py  preview.py  util.py
aism/sources/: __init__.py  base.py  claude.py  opencode.py
tests/: conftest.py  test_claude.py  test_content.py  test_fzf.py  test_opencode.py
