[project]
name = "aism"
version = "0.1.0"
description = "Browse, search, and resume Claude Code and opencode sessions with fzf"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yarden Zamir", email = "dev@yarden-zamir.com" }]
dependencies = []

[project.scripts]
aism = "aism.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aism"]

[tool.pytest.ini_options]
testpaths = ["tests"]
